--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "homepage": "http://github.com/shahidkarimi/i18-js-generator",
     "authors": [
         {
-            "name": "Martin Lindhe",
-            "email": "martin@ubique.se"
+            "name": "Shahid Karimi",
+            "email": "me@shahidkarimi.com"
         }
     ],
     "require": {
